# YABILABB

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/yabilabb/: __init__.py  cli.py  envelope.py  models.py  parser.py  records.py  writer.py  yaml_io.py
src/yabilabb/web/: app.py
src/yabilabb/web/static/: style.css
src/yabilabb/web/templates/: _operators.html  base.html  declaration.html  index.html  modelo.html
tests/: test_records.py  test_roundtrip.py
